--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy:rinkeby": "npx hardhat run scripts/deploy.ts --network rinkeby"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "4.6.0",
+    "dotenv": "16.0.1"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.6",
