--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "clean": "rm -rf artifacts && rm -rf cache && rm -rf typechain",
+    "auto:generate-nft-data": "npm run clean && ts-node automation/generateNFTData.ts",
     "deploy:rinkeby": "npx hardhat run scripts/deploy.ts --network rinkeby"
   },
   "dependencies": {
     "@openzeppelin/contracts": "4.6.0",
-    "dotenv": "16.0.1"
+    "dotenv": "16.0.1",
+    "lodash": "4.17.21",
+    "random-words": "1.1.2",
+    "randomcolor": "0.6.2"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.6",
@@ -16,8 +21,11 @@
     "@typechain/ethers-v5": "7.2.0",
     "@typechain/hardhat": "2.3.1",
     "@types/chai": "4.3.1",
+    "@types/lodash": "4.14.182",
     "@types/mocha": "9.1.1",
     "@types/node": "12.20.52",
+    "@types/random-words": "1.1.2",
+    "@types/randomcolor": "0.5.6",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "chai": "4.3.6",
