--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,33 @@ typechain
 #Hardhat files
 cache
 artifacts
+
+# dependencies
+/.pnp
+.pnp.js
+
+# next.js
+/.next/
+/out/»
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
