--- a/packages/bsnft-blockchain/package.json
+++ b/packages/bsnft-blockchain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buildspace-nft",
+  "name": "@bsnft/blockchain",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,45 +9,32 @@
     "deploy:rinkeby": "npx hardhat run scripts/deploy.ts --network rinkeby"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "4.6.0",
-    "dotenv": "16.0.1",
-    "lodash": "4.17.21",
-    "random-words": "1.1.2",
-    "randomcolor": "0.6.2"
-  },
-  "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.6",
     "@nomiclabs/hardhat-etherscan": "3.0.3",
     "@nomiclabs/hardhat-waffle": "2.0.3",
+    "@openzeppelin/contracts": "4.6.0",
     "@typechain/ethers-v5": "7.2.0",
     "@typechain/hardhat": "2.3.1",
+    "dotenv": "16.0.1",
+    "ethereum-waffle": "3.4.4",
+    "ethers": "5.6.6",
+    "hardhat": "2.9.5",
+    "hardhat-gas-reporter": "1.0.8",
+    "lodash": "4.17.21",
+    "random-words": "1.1.2",
+    "randomcolor": "0.6.2",
+    "solidity-coverage": "0.7.21",
+    "typechain": "5.2.0"
+  },
+  "devDependencies": {
     "@types/chai": "4.3.1",
     "@types/lodash": "4.14.182",
     "@types/mocha": "9.1.1",
     "@types/node": "12.20.52",
     "@types/random-words": "1.1.2",
     "@types/randomcolor": "0.5.6",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
     "chai": "4.3.6",
-    "dotenv": "16.0.1",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-promise": "5.2.0",
-    "ethereum-waffle": "3.4.4",
-    "ethers": "5.6.6",
-    "hardhat": "2.9.5",
-    "hardhat-gas-reporter": "1.0.8",
-    "prettier": "2.6.2",
-    "prettier-plugin-solidity": "1.0.0-beta.13",
-    "solhint": "3.3.7",
-    "solidity-coverage": "0.7.21",
     "ts-node": "10.7.0",
-    "typechain": "5.2.0",
     "typescript": "4.6.4"
   }
 }
