--- a/packages/bsnft-web/package.json
+++ b/packages/bsnft-web/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "bsnft-web",
-  "version": "0.1.0",
+  "name": "@bsnft/web",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "dev": "next dev",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "web3": "1.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
   }
 }
