--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "turbo run dev  --no-cache --parallel",
     "blockchain:deploy": "npm run deploy -w=@bsnft/blockchain",
     "blockchain:deploy:rinkeby": "npm run deploy:rinkeby -w=@bsnft/blockchain",
+    "blockchain:verify:rinkeby": "npm run verify:rinkeby -w=@bsnft/blockchain",
     "typescript:check": "tsc",
     "eslint:lint": "eslint ."
   },
